Update: fix pet attack cooldown, refactor task utils, add training boss scripts, and sync Java source